name:               irreverent-shush
version:            0.0.1
license:            BSD3
license-file:       LICENSE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017 Irreverent Pixel Feats
synopsis:           Shell out library that wraps around process
category:           Data
description:        Shell out library that wraps around process
homepage:           https://github.com/irreverent/shush
bug-reports:        https://github.com/irreverent/shush/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/irreverent/irreverent-shush.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   bytestring              == 0.10.*
                    ,   directory               == 1.2.*
                    ,   mmorph                  == 1.0.*
                    ,   domdere-preamble
                    ,   process                 == 1.6.*
                    ,   transformers            > 0.3           && <= 0.6
                    ,   ultra-either
                    ,   ultra-exceptions
                    ,   ultra-lens
                    ,   ultra-text
                    ,   unix                    == 2.7.*

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Shush
                        Shush.Control
                        Shush.Data

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   irreverent-shush
